saving results of the on-going development

--- a/config/css_RunDeepForcedSource.params.tmpl
+++ b/config/css_RunDeepForcedSource.params.tmpl
@@ -1,7 +1,7 @@
 [table_info]
 tableName:       RunDeepForcedSource
 partitioning:    1
-schemaFile:      $CONFIG_DIR/Source.sql
+schemaFile:      $SQL_DIR/RunDeepForcedSource.sql
 compression:     0
 subChunks:       0
 dirColName:      objectId
