--- a/config/css_RunDeepSource.params.tmpl
+++ b/config/css_RunDeepSource.params.tmpl
@@ -1,7 +1,7 @@
 [table_info]
 tableName:       RunDeepSource
 partitioning:    1
-schemaFile:      $CONFIG_DIR/RunDeepSource.sql
+schemaFile:      $SQL_DIR/RunDeepSource.sql
 compression:     0
 subChunks:       1
 dirColName:      id
