implemented template translation, added a test for the translation

--- a/config/common-non-part.cfg.tmpl
+++ b/config/common-non-part.cfg.tmpl
@@ -2,7 +2,7 @@
 htm.level = 8
 
 # director table location
-dirDb = sdss_stripe82_00 
+dirDb = $OUTPUT_DB
 dirTable = RunDeepSource
 
 # Common partitioning parameters.
